
* Correctly interpret "451 Rename/move failure: Directory not empty" from
  ftp servers while trying to take a lock.
  (Martin Pool, #528722)

* DirStateRevisionTree.kind() was returning wrong result when 'kind'
  changes occured between the workingtree and one of its parents.
  (Vincent Ladeuil, #533437)

* Fix stub sftp test server to call os.getcwdu().
  (Vincent Ladeuil, #526211, #526353)

* Network transfer amounts and rates are now displayed in SI units according
  to the Ubuntu Units Policy <https://wiki.ubuntu.com/UnitsPolicy>.
  (Gordon Tyler, #514399)

* Support kind markers for socket and fifo filesystem objects. This
  prevents ``bzr status --short`` from crashing when those files are
  present.  (John Arbash Meinel, #303275)

* ``bzr mkdir DIR`` will not create DIR unless DIR's parent is a versioned
   directory. (Parth Malwankar, #138600)

* SSH child processes will now ignore SIGQUIT on nix systems so breaking into
  the debugger won't kill the session.
  (Martin <gzlist@googlemail.com>, #162502)

* Allow additional arguments to
  ``RemoteRepository.add_inventory_by_delta()``. (Jelmer Vernooij, #532631)

* Tolerate patches with leading noise in ``bzr-handle-patch``.
  (Toshio Kuratomi, Martin Pool, #502076)

API Changes
***********

* ``BranchFormat.initialize`` now takes an optional ``name`` of the colocated 
  branch to create. (Jelmer Vernooij)

* ``BzrDir.get_branch_transport`` now takes an optional ``name`` of the 
  colocated branch to open. (Jelmer Vernooij)

* Added ``bzrlib.osutils.set_signal_handler``, a convenience function that
  can set a signal handler and call ``signal.siginterrupt(signum,
  False)`` for it, if the platform and Python version supports it.
  (Andrew Bennetts, #496813)

* New ``bzrlib.initialize`` is recommended for programs using bzrlib to 
  run when starting up; it sets up several things that previously needed
  to be done separately.
  (Martin Pool, #507710)
